[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyfaidx>=0.9.0.3",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
